[package]
name = "bitcoin-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
surrealdb = { version = "1.0.0" }
bitcoincore-rpc = "0.17.0"
bitcoin = "0.30.1"
anyhow = "1.0.75"
