[package]
name = "bitcoin-surrealdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
surrealdb = { version = "1.0.0" }
bitcoincore-rpc = "0.18.0"
bitcoin = "0.31.0"
anyhow = "1.0.75"
strum = { version = "0.25.0", features = ["derive"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
log = "0.4.20"
env_logger = "0.10.1"
